--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col md:flex-row">
   <div>
-    <app-profile></app-profile>
+    <app-profile [data]="profile"></app-profile>
   </div>
   <div>
     <nav class="nav-menu">
