--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -1,1 +1,8 @@
-<p>skills works!</p>
+<div>
+  <div *ngFor="let language of languages">
+    <app-progress-bar [data]="language"></app-progress-bar>
+  </div>
+  <div *ngFor="let skill of skills">
+    <app-progress-bar [data]="skill"></app-progress-bar>
+  </div>
+</div>
