Implementation of several components: timeline, progress bar, portfolio

--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -1,5 +1,26 @@
-<div>
-  <div *ngFor="let item of history">
-    {{item | json}}
-  </div>
+<div class="grid grid-cols-12">
+  <ng-container *ngFor="let item of history; let i = index">
+    <div class="row-span-2 lg:row-span-1 timeline-icon">
+      <svg *ngIf="i===0 && type==='school'" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+        <path d="M9 4.804A7.968 7.968 0 005.5 4c-1.255 0-2.443.29-3.5.804v10A7.969 7.969 0 015.5 14c1.669 0 3.218.51 4.5 1.385A7.962 7.962 0 0114.5 14c1.255 0 2.443.29 3.5.804v-10A7.968 7.968 0 0014.5 4c-1.255 0-2.443.29-3.5.804V12a1 1 0 11-2 0V4.804z" />
+      </svg>
+      <svg *ngIf="i===0 && type==='work'" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+        <path fill-rule="evenodd" d="M6 6V5a3 3 0 013-3h2a3 3 0 013 3v1h2a2 2 0 012 2v3.57A22.952 22.952 0 0110 13a22.95 22.95 0 01-8-1.43V8a2 2 0 012-2h2zm2-1a1 1 0 011-1h2a1 1 0 011 1v1H8V5zm1 5a1 1 0 011-1h.01a1 1 0 110 2H10a1 1 0 01-1-1z" clip-rule="evenodd" />
+        <path d="M2 13.692V16a2 2 0 002 2h12a2 2 0 002-2v-2.308A24.974 24.974 0 0110 15c-2.796 0-5.487-.46-8-1.308z" />
+      </svg>
+      <div class="bullet" *ngIf="i>0"></div>
+    </div>
+    <div class="col-span-11 lg:col-span-2 light justify-self-center">
+      {{item.dateStart | date:"yyyy"}}-{{item.dateEnd | date:"yyyy"}}
+    </div>
+    <div class="col-span-11 lg:col-span-9">
+      <div class="title-2">
+        {{item.title}}
+        <span class="float-right leading-7 light ">{{item.location}}</span>
+      </div>
+      <div class="regular">
+        {{item.description}}
+      </div>
+    </div>
+  </ng-container>
 </div>
