--- a/src/app/pages/experience/experience.component.html
+++ b/src/app/pages/experience/experience.component.html
@@ -1,3 +1,3 @@
 <div>
-  <app-timeline [history]="jobHistory"></app-timeline>
+  <app-timeline [history]="jobHistory" type="work"></app-timeline>
 </div>
