--- a/src/app/components/portfolio-item/portfolio-item.component.html
+++ b/src/app/components/portfolio-item/portfolio-item.component.html
@@ -1,3 +1,12 @@
-<p>
-  {{data | json}}
-</p>
+<div class="portfolio-item">
+  <img [src]="data.image" class="w-100 h-auto"/>
+  <div class="company-name">
+    Company name {{data.id}}
+  </div>
+  <div class="date">
+    {{data.date | date:"yyyy"}}
+  </div>
+  <div class="regular">
+    {{data.description["en"]}}
+  </div>
+</div>
