--- a/src/app/components/progress-bar/progress-bar.component.html
+++ b/src/app/components/progress-bar/progress-bar.component.html
@@ -1,3 +1,8 @@
-<p>
-  {{data | json}}
-</p>
+<div class="flex flex-col md:flex-row items-center mb-4">
+  <div class="w-full md:w-1/2 mb-4 md:mb-0">
+    {{data.label["en"]}}
+  </div>
+  <div class="progress-bar w-full md:w-1/2">
+    <div [style]="{width: data.percentage+'%'}"></div>
+  </div>
+</div>
