--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,16 +1,18 @@
 <div class="flex flex-col md:flex-row">
-  <div>
+  <div class="w-full md:w-1/3 xl:max-w-4xl">
     <app-profile [data]="profile"></app-profile>
   </div>
-  <div>
+  <div class="home-content w-full md:w-2/3 px-4 py-2 md:px-8 md:py-4 xl:px-16 xl:py-8">
     <nav class="nav-menu">
       <ul class="flex">
-        <li><a routerLink="/education" routerLinkActive="active">Education</a></li>
-        <li><a routerLink="/experience" routerLinkActive="active">Experience</a></li>
-        <li><a routerLink="/portfolio" routerLinkActive="active">Portfolio</a></li>
-        <li><a routerLink="/skills" routerLinkActive="active">Skills</a></li>
+        <li class="heading"><a routerLink="/education" routerLinkActive="active">Education</a></li>
+        <li class="heading"><a routerLink="/experience" routerLinkActive="active">Experience</a></li>
+        <li class="heading"><a routerLink="/portfolio" routerLinkActive="active">Portfolio</a></li>
+        <li class="heading"><a routerLink="/skills" routerLinkActive="active">Skills</a></li>
       </ul>
     </nav>
-    <router-outlet></router-outlet>
+    <div class="router-outlet px-4 py-6 md:px-8 md:py-12 xl:px-16 xl:py-16">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
