--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -1,5 +1,3 @@
-<div>
-  <div *ngFor="let briefcase of portfolioItems">
-    <app-portfolio-item [data]="briefcase"></app-portfolio-item>
-  </div>
+<div class="grid grid-cols-1 lg:grid-cols-2 gap-x-12 gap-y-6">
+  <app-portfolio-item *ngFor="let briefcase of portfolioItems" [data]="briefcase"></app-portfolio-item>
 </div>
