--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col md:flex-row">
-  <div class="w-full md:w-1/3 xl:max-w-4xl">
+  <div class="w-full md:w-1/3 xl:max-w-96 ">
     <app-profile [data]="profile"></app-profile>
   </div>
   <div class="home-content w-full md:w-2/3 px-4 py-2 md:px-8 md:py-4 xl:px-16 xl:py-8">
