--- a/src/app/components/portfolio-item/portfolio-item.component.scss
+++ b/src/app/components/portfolio-item/portfolio-item.component.scss
@@ -3,7 +3,7 @@
   box-sizing: border-box;
   box-shadow: 0px 16px 24px rgba(0, 0, 0, 0.06), 0px 2px 6px rgba(0, 0, 0, 0.04), 0px -1px 1px rgba(0, 0, 0, 0.04);
   border-radius: 4px;
-  @apply flex flex-col p-3;
+  @apply flex flex-col p-3 h-full;
   .company-name {
     font-weight: 500;
     font-size: 20px;
