--- a/src/app/components/title-item/title-item.component.html
+++ b/src/app/components/title-item/title-item.component.html
@@ -1,1 +1,14 @@
-<p>{{data | json}}</p>
+<div class="flex flex-col lg:flex-row mb-8">
+  <img [src]="IMAGE" class="w-full lg:w-40 h-auto">
+  <div class="flex flex-col ml-6">
+    <div class="title-2">
+      {{data.title["en"]}}
+    </div>
+    <div class="text-base font-bold">
+      {{data.description["en"]}}
+    </div>
+    <div class="regular">
+      {{data.registred | date:"yyyy/MM/dd"}}
+    </div>
+  </div>
+</div>
