--- a/src/app/pages/education/education.component.html
+++ b/src/app/pages/education/education.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div>
+  <div class="mb-16">
     <app-timeline [history]="educationHistory" type="school"></app-timeline>
   </div>
   <div class="title">
