Change language of api response on button click

--- a/src/app/components/portfolio-item/portfolio-item.component.html
+++ b/src/app/components/portfolio-item/portfolio-item.component.html
@@ -7,6 +7,6 @@
     {{data.date | date:"yyyy"}}
   </div>
   <div class="regular">
-    {{data.description["en"]}}
+    {{data.description}}
   </div>
 </div>
