--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -12,6 +12,15 @@
   }
 }
 
+.toggle-language {
+  background-color: #E9E9E9;
+  width: fit-content;
+  color: #8F7CFF;
+  padding: 10px 20px;
+  align-self: flex-end;
+  margin: 0 20px;
+}
+
 @screen lg {
   .full-name {
     @apply text-3xl;
