--- a/src/app/components/progress-bar/progress-bar.component.html
+++ b/src/app/components/progress-bar/progress-bar.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col md:flex-row items-center mb-4">
   <div class="w-full md:w-1/2 mb-4 md:mb-0">
-    {{data.label["en"]}}
+    {{data.label}}
   </div>
   <div class="progress-bar w-full md:w-1/2">
     <div [style]="{width: data.percentage+'%'}"></div>
