--- a/src/app/components/title-item/title-item.component.html
+++ b/src/app/components/title-item/title-item.component.html
@@ -2,10 +2,10 @@
   <img [src]="IMAGE" class="w-full lg:w-40 h-auto">
   <div class="flex flex-col ml-6">
     <div class="title-2">
-      {{data.title["en"]}}
+      {{data.title}}
     </div>
     <div class="text-base font-bold">
-      {{data.description["en"]}}
+      {{data.description}}
     </div>
     <div class="regular">
       {{data.registred | date:"yyyy/MM/dd"}}
